--- a/css/css.css
+++ b/css/css.css
@@ -200,11 +200,14 @@
         right: 0;
         top: 80px;
         background-color: rgba(0,0,0,0.6);
+        width: 100%;
+        text-align: center;
     }
     .home .nav .nav-bar .toggle-menu:hover+ ul li{
         padding: 20px;
-        border-bottom: 1px solid rgba(255,255,255,0.7);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.182);
         margin: auto;
+        width: 100%;
     }
 }
 @media screen and (max-width:767px) and (min-width:500px){
@@ -224,11 +227,14 @@
         right: 0;
         top: 80px;
         background-color: rgba(0,0,0,0.6);
+        width: 100%;
+        text-align: center;
     }
     .home .nav .nav-bar .toggle-menu:hover+ ul li{
         padding: 20px;
-        border-bottom: 1px solid rgba(255,255,255,0.7);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.182);
         margin: auto;
+        width: 100%;
     }
     .home .nav .image img{
         width: 70%;
@@ -251,11 +257,14 @@
         right: 0;
         top: 80px;
         background-color: rgba(0,0,0,0.6);
+        width: 100%;
+        text-align: center;
     }
     .home .nav .nav-bar .toggle-menu:hover+ ul li{
         padding: 20px;
-        border-bottom: 1px solid rgba(255,255,255,0.7);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.182);
         margin: auto;
+        width: 100%;
     }
     .home .nav .image img{
         width: 100%;
@@ -307,6 +316,8 @@
 }
 .about .about-content ul li{
     margin-bottom: 20px;
+    display: flex;
+    
 }
 .about .about-content ul li i{
     border: 1px solid #686868;
@@ -314,10 +325,16 @@
     padding: 10px;
     margin-right: 10px;
     color: #8e7754;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .about .about-content ul li p{
     display: inline-block;
     margin-bottom: 20px;
+    margin-top: 10px;
     color: #686868;
 }
 @media screen and (max-width:979px) and (min-width:768px){
@@ -634,6 +651,7 @@
 .down_footer{
     background-color: #353330;
 }
+
 .down_footer .container{
     width: 90%;
     margin: auto;
@@ -662,4 +680,10 @@
 .down_footer .container a.twitter:hover {
     background-color: #00ACED; 
 }
+@media screen and (max-width:499px) {
+  .down_footer .container img{
+    width: 80%;
+}
+ }
+
  /* End down footer */
